# MLOps-practice

./: .dockerignore  README.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml  requirements.txt  testing.env
api/: Dockerfile  NeuralNetwork.py  api.py  requirements.txt
mlflow/: Dockerfile
src/: NeuralNetwork.py  experiment1.py  learn_pipeline.py  model_state.pth
